添加了 springmvc 练习项目及学习笔记

--- a/springmvc-demo/src/main/webapp/WEB-INF/web.xml
+++ b/springmvc-demo/src/main/webapp/WEB-INF/web.xml
@@ -30,7 +30,7 @@
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>dispatcherServlet</servlet-name>
+        <servlet-name>springMVC</servlet-name>
         <!--设置springMVC的核心控制器所能处理的请求的请求路径。
         “/”所匹配的请求可以是/login或.html或.js或.css方式的请求路径，但是“/”不能匹配.jsp请求路径的请求-->
         <url-pattern>/</url-pattern>
