--- a/springmvc-demo3/web/WEB-INF/web.xml
+++ b/springmvc-demo3/web/WEB-INF/web.xml
@@ -27,6 +27,7 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
+    <!--同时存在 CharacterEncodingFilter 和 HiddenHttpMethodFilter 两个过滤器，必须先注册 CharacterEncodingFilter，再注册 HiddenHttpMethodFilter-->
     <!--请求和响应的字符串过滤器：解决请求参数中文乱码问题-->
     <filter>
         <filter-name>CharacterEncodingFilter</filter-name>
@@ -47,4 +48,16 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     <!--请求和响应的字符串过滤器：解决请求参数中文乱码问题-->
+
+    <!--处理 PUT 和 DELETE 请求的过滤器-->
+    <filter>
+        <filter-name>HiddenHttpMethodFilter</filter-name>
+        <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>HiddenHttpMethodFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <!--处理 PUT 和 DELETE 请求的过滤器-->
+    <!--同时存在 CharacterEncodingFilter 和 HiddenHttpMethodFilter 两个过滤器，必须先注册 CharacterEncodingFilter，再注册 HiddenHttpMethodFilter-->
 </web-app>
