--- a/springcloud-demo/pom.xml
+++ b/springcloud-demo/pom.xml
@@ -12,6 +12,9 @@
         <module>micro-service-cloud-eureka-7002</module>
         <module>micro-service-cloud-eureka-7003</module>
         <module>micro-service-cloud-customer-dept-80</module>
+        <module>micro-service-cloud-provider-dept-8002</module>
+        <module>micro-service-cloud-provider-dept-8003</module>
+        <module>micro-service-cloud-provider-dept</module>
     </modules>
 
     <dependencies>
